# CoffeeCupEngine

./: CMakeLists.txt  Makefile  build.sh  premake5.lua
CoffeeCupEngine/: CMakeLists.txt  Makefile  build.sh  premake5.lua
CoffeeCupEngine/include/: CCEngine.h  CCEngineEntryPoint.h
CoffeeCupEngine/res/shaders/: Color.shader  Texture  Texture.shader
CoffeeCupEngine/src/: CCEnginePrecompiled.h  imgui.ini  main.cpp  pch.h
CoffeeCupEngine/src/base/window/: window.cpp  window.h
CoffeeCupEngine/src/events/: event.h  eventHandler.h  eventManager.cpp  eventManager.h
CoffeeCupEngine/src/game/: entryPoint.h  game.cpp  game.h  gameConstants.h
CoffeeCupEngine/src/game/ECS/: component.cpp  component.h  entity.cpp  entity.h
CoffeeCupEngine/src/game/ECS/components/: spriteComponent.cpp  spriteComponent.h  transformComponent.cpp  transformComponent.h
CoffeeCupEngine/src/game/input/: bitmask.cpp  bitmask.h  command.h  inputHandler.cpp  inputHandler.h  inputManager.cpp  inputManager.h
CoffeeCupEngine/src/game/scenes/: scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
CoffeeCupEngine/src/input/: bitmask.cpp  command.h  commandFactory.h  contextChain.h  inputConstants.h  inputContext.cpp  inputContext.h  inputContextChain.cpp  inputContextChain.h  inputEvents.h  inputHandler.cpp  inputHandler.h  inputManager.cpp  inputManager.h  keyCodes.h  keyboardInputContext.cpp  keyboardInputContext.h  tempCodeRunnerFile.h
CoffeeCupEngine/src/old/: Renderer.h  Texture old.cpp  mainOld.cpp
CoffeeCupEngine/src/platform/OpenGL/: GLDynamicIndexBuffer.cpp  GLDynamicIndexBuffer.h  GLDynamicVertexBuffer.cpp  GLDynamicVertexBuffer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTextureManager.cpp  GLTextureManager.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h  GLVertexBufferLayout.cpp  GLVertexBufferLayout.h  GlUtils.cpp  GlUtils.h
CoffeeCupEngine/src/platform/SDL/: SDLInputHandler.cpp  SDLInputHandler.h  SDLWindow.cpp  SDLWindow.h
CoffeeCupEngine/src/rendering/: camera.cpp  camera.h  indexBuffer.cpp  indexBuffer.h  quad.cpp  quad.h  renderer.cpp  renderer.h  renderingConstants.h  shader.cpp  shader.h  texture.cpp  texture.h  textureManager.cpp  textureManager.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.cpp  vertexBufferLayout.h  window.cpp  window.h
CoffeeCupEngine/src/rendering/indexBuffer/: DynamicIndexBuffer.cpp  DynamicIndexBuffer.h
CoffeeCupEngine/src/rendering/renderer/: Renderer  Renderer.cpp  Renderer.h
CoffeeCupEngine/src/rendering/shaders/: Shader.cpp  Shader.h
CoffeeCupEngine/src/rendering/texture/: Texture.cpp  Texture.h
CoffeeCupEngine/src/rendering/textureManager/: textureManager.cpp  textureManager.h
CoffeeCupEngine/src/rendering/vertexArray/: VertexArray.cpp  VertexArray.h
CoffeeCupEngine/src/rendering/vertexBuffer/: DynamicVertexBuffer  DynamicVertexBuffer.cpp  DynamicVertexBuffer.h
CoffeeCupEngine/src/rendering/vertexBufferLayout/: VertexBufferLayout.cpp  VertexBufferLayout.h
CoffeeCupEngine/src/utils/: GlUtils.h  iniParser.h  linkedList.h  utilities.h
CoffeeCupEngine/utils/: linkedList.h
CoffeeCupEngine/vendors/imgui/: imgui_impl_glfw_gl3
ExampleGame/: CMakeLists.txt
ExampleGame/assets/input/: inputMapping.ini
ExampleGame/src/: exampleGame.cpp  exampleGame.h  gameExample.cpp  gameExample.h  main.cpp
ExampleGame/src/input/: commandFactory.cpp  commandFactory.h  controlCommands.cpp  controlCommands.h  inputMapping.json
doc/: inputSystem.odg
res/shaders/: Base
scripts/: CMakeCache.txt  build.bat  build.sh  cppList.sh  run.bat  test.sh
src/: main  main.cpp  sandbox.cpp
src/base/window/: window.cpp  window.h
src/game/: game.cpp  game.h  gameConstants.h
src/game/ECS/: component.h  entity.h
src/game/event/: event.h
src/game/game/: game.cpp  game.h
src/game/gameObject/: gameObject.h
src/game/input/: bitmask.h
src/game/scenes/: scene.h  sceneManager.h
src/game/sprite/: sprite.h
src/rendering/geometry/: quad.cpp  quad.h
src/rendering/indexBuffer/: DynamicIndexBuffer.cpp  DynamicIndexBuffer.h
src/rendering/renderer/: Renderer.cpp  Renderer.h
src/rendering/shaders/: Shader.h
src/rendering/texture/: Texture.cpp  Texture.h
src/rendering/textureManager/: textureManager.h
src/rendering/vertexArray/: VertexArray  VertexArray.cpp  VertexArray.h
src/rendering/vertexBuffer/: DynamicVertexBuffer.cpp
src/utils/: GlUtils.h  utilities.h
vendors/premake/: LICENSE.txt
